--- a/TODO.txt
+++ b/TODO.txt
@@ -1,18 +1,29 @@
 - CTE_Model:
-    - temperatura_del_agua_de_red: 
+    - temperatura_del_agua_de_red:
       Detectar el caso en el que no hay definida demanda de ACS (no hay
       circuito) y evitar el fallo en ese caso.
       Usar WaterEquipment detectando objetos por tipo (los objetos del model
-      son subtipo del workspace?)
+      son subtipo del workspace?): model.getObjectsByTypeAndName("OS:WaterUse:Equipment:Definition".to_IddObjectType,'Water Fixture Definition').empty?
+    - Cálculo de consumos de ventilación (SFP = dp/n_tot), incluso
+      seleccionando según tipo de ventilación (doble/simple flujo), ver nota
+      técnica de AIVC.
+    - Puentes térmicos de esquina (y pilares embebidos en fachada)
+    - Definir envolvente por espacios en area total y no por definición estricta,
+      ya que es más flexible.
+- CTE_Workspace:
+    - carga de mobiliario según tipo de edificio
+    - Definir coeficientes de paso de vectores energéticos
+    - Objetos de dimensionado de ACS
 - OS_15603:
     - Limpiar plantilla de report y dejar solamente lo que nos interesa
     - Renombrar a CTE_Report
     - Que el informe en la tabla "Consumo Final" se incluya o no la iluminación
 	  en función de que sea terciario o no.
+
 - Otros:
-    Ver posibilidad de pasar datos entre medidas a través de comentarios
+    - Ver posibilidad de pasar datos entre medidas a través de comentarios
     model.building.setComment(commentstring), serializando a JSON.
     Se accede posteriormente leyendo el lastRunModel y con
     model.building.getComments[2..-1] deserializando el JSON.
-
-
+    - Añadir más metadatos para uso en coste óptimo: Volumen envolvente y
+      mediciones
