--- a/TODO.txt
+++ b/TODO.txt
@@ -14,6 +14,9 @@
 CTE_Informe:
     - Incluir iluminación en "Consumo Final EPB" en función de que sea terciario o no.
     - Hacer mediciones a partir de modelo y no de base de datos SQL
+    - Calcular A_sol,ver / A_util pidiendo factor de sombra de protecciones
+      móviles
+    - Calcular K
 - Otros:
     - Incluir factores de paso a energía primaria y emisiones (habría que
       solicitar para RED1 y RED2)
