--- a/TODO.txt
+++ b/TODO.txt
@@ -26,5 +26,8 @@ OS_Report_SI:
       solicitar para RED1 y RED2)
     - Generar XML
         - ver https://github.com/asparke2/demo-measures/tree/master/ExportXMLMeasure
-
+- Análisis paramétrico:
+    - Cambiar provincia y altitud de referencia al cambiar archivo de clima
+    - Cambiar construction set + U del frame and divider + shading control
+      (vincula construcción -por zona- y horario)
 
