--- a/TODO.txt
+++ b/TODO.txt
@@ -15,6 +15,8 @@ CTE_Informe:
       móviles
     - Calcular K
     - Arreglar tabla de dimensionado de equipos
+	- Mostrar transmitancia térmica de construcciones incluyendo las resistencias 
+	  superficiales. Ver: openstudio-standards/data/lib/openstudio-standards/standards/Standards.Construction.rb
 CTE_EPBDcalc:
     - Nombre de archivo de salida generado con metadatos, y no fijo.
     - Revisar usabilidad de comentarios
